# GOIT_WEB_hw5

./: README.md  pyproject.toml
chat/: main.py  test.py
chat/scripts/: exchange.py
core/: exchange.py  requests.py
goit_web_hw5/: main.py  requests.py
